test/spec_vectors/loop/fail/module_13.wat
(module (func $type-empty-i32 (result i32) (loop)))